# Baboon

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: app.rs  embedded_definitions.rs  format.rs  main.rs  source.rs
src/app/: audio.rs  browser.rs  controller.rs  editor.rs  export.rs  field_docs.rs  field_index.rs  foundation.rs  function_editor.rs  journal.rs  keywords.rs  material.rs  model_preview.rs  prefs.rs  shader.rs  state.rs  style.rs  tag_icons.rs  ui.rs
