# Standalone repo: its own workspace root so it doesn't get absorbed into a
# parent workspace. The blam-tags engine is a pinned Git dependency
# (camden-smallwood/blam-tags), not a submodule.
[workspace]
members = ["."]
default-members = ["."]

[package]
name = "baboon"
version = "0.1.2"
edition = "2024"
build = "build.rs"
default-run = "Baboon"

[[bin]]
name = "Baboon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
blam-tags = { git = "https://github.com/camden-smallwood/blam-tags", rev = "03e12096c9598790cde70ea0d8175beb749f5eda" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
image = { version = "0.25", default-features = false, features = ["ico"] }
rfd = "0.15"
serde_json = "1"
walkdir = "2"
