# Standalone repo: its own workspace root so it doesn't get absorbed into a
# parent workspace. The blam-tags engine is a pinned Git dependency
# (camden-smallwood/blam-tags), not a submodule.
[workspace]
members = ["."]
default-members = ["."]

[package]
name = "baboon"
version = "0.1.4"
edition = "2024"
build = "build.rs"
default-run = "Baboon"

[[bin]]
name = "Baboon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
blam-tags = { git = "https://github.com/camden-smallwood/blam-tags", rev = "ab06fa7779a53366f707ae909013161c8ea4cd73" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.29", features = ["svg"] }
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
rfd = "0.15"
serde_json = "1"
walkdir = "2"
